--- a/CIFE/.settings/org.eclipse.cdt.core.prefs
+++ b/CIFE/.settings/org.eclipse.cdt.core.prefs
@@ -5,58 +5,58 @@ doxygen/doxygen_use_pre_tag=false
 doxygen/doxygen_use_structural_commands=false
 eclipse.preferences.version=1
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/MINGW_HOME/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/MINGW_HOME/operation=append
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/MINGW_HOME/value=C\:\\TDM-GCC-64
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/MINGW_HOME/operation=replace
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/MINGW_HOME/value=C\:\\mingw32
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/MSYS_HOME/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/MSYS_HOME/operation=append
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/MSYS_HOME/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/MSYS_HOME/value=C\:\\Program Files\\Git
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/WXCFG/delimiter=;
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/WXCFG/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/WXCFG/value=gcc_lib32\\mswu
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/WXWIN/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/WXWIN/operation=append
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/WXWIN/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/WXWIN/value=C\:\\wxWidgets-3.2.1
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/append=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163.283079845/appendContributed=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/MINGW_HOME/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/MINGW_HOME/operation=append
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/MINGW_HOME/value=C\:\\TDM-GCC-64
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/MINGW_HOME/operation=replace
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/MINGW_HOME/value=C\:\\mingw32
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/MSYS_HOME/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/MSYS_HOME/operation=append
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/MSYS_HOME/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/MSYS_HOME/value=C\:\\Program Files\\Git
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/WXCFG/delimiter=;
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/WXCFG/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/WXCFG/value=gcc_lib32\\mswud
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/WXWIN/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/WXWIN/operation=append
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/WXWIN/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/WXWIN/value=C\:\\wxWidgets-3.2.1
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/append=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.1390582163/appendContributed=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/MINGW_HOME/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/MINGW_HOME/operation=append
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/MINGW_HOME/value=C\:\\TDM-GCC-64
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/MINGW_HOME/operation=replace
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/MINGW_HOME/value=C\:\\mingw64
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/MSYS_HOME/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/MSYS_HOME/operation=append
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/MSYS_HOME/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/MSYS_HOME/value=C\:\\Program Files\\Git
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/WXCFG/delimiter=;
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/WXCFG/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/WXCFG/value=gcc_lib64\\mswu
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/WXWIN/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/WXWIN/operation=append
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/WXWIN/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/WXWIN/value=C\:\\wxWidgets-3.2.1
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/append=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441.811658407/appendContributed=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/MINGW_HOME/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/MINGW_HOME/operation=append
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/MINGW_HOME/value=C\:\\TDM-GCC-64
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/MINGW_HOME/operation=replace
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/MINGW_HOME/value=C\:\\mingw64
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/MSYS_HOME/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/MSYS_HOME/operation=append
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/MSYS_HOME/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/MSYS_HOME/value=C\:\\Program Files\\Git
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/WXCFG/delimiter=;
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/WXCFG/operation=append
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/WXCFG/value=gcc_lib64\\mswud
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/WXWIN/delimiter=;
-environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/WXWIN/operation=append
+environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/WXWIN/operation=replace
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/WXWIN/value=C\:\\wxWidgets-3.2.1
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/append=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.280105441/appendContributed=true
